--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.html",
   "dependencies": {},
   "devDependencies": {
-    "local-web-server": "^2.6.1"
+    "local-web-server": "^2.6.1",
+    "workbox-cli": "^4.1.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "workbox generateSW workbox-config.js"
   },
   "repository": {
     "type": "git",
