--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "workbox generateSW workbox-config.js"
+    "build": "workbox injectManifest workbox-config.js"
   },
   "repository": {
     "type": "git",
