--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "PWA boilerplate code",
   "main": "app.js",
-  "dependencies": {},
+  "dependencies": {
+    "workbox-window": "^5.1.3"
+  },
   "devDependencies": {
     "copy-webpack-plugin": "^5.1.1",
     "webpack": "^4.43.0",
