--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "workbox-window": "^5.1.3"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
