--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
+    "html-webpack-plugin": "^4.3.0",
+    "marked": "^1.1.1",
+    "remark-html": "^12.0.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
@@ -17,7 +20,8 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --env.mode development --colors",
-    "build": "webpack --env.mode production"
+    "build": "webpack --env.mode production",
+    "test": "webpack --env.mode development"
   },
   "repository": {
     "type": "git",
