Added MIT license file

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "boilerplate"
   ],
   "author": "Jad Joubran",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/RRoodselaar/PWA-boilerplate/issues"
   },
