--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "description": "PWA boilerplate code",
   "main": "app.js",
   "dependencies": {
-    "workbox-window": "^5.1.3"
+    "workbox-window": "^6.5.4"
   },
   "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.0.3",
-    "html-webpack-plugin": "^4.3.0",
+    "clean-webpack-plugin": "^4.0.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.0",
     "marked": "^4.2.12",
     "remark-html": "^15.0.1",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1",
     "workbox-cli": "^6.5.4",
-    "workbox-webpack-plugin": "^4.3.1"
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "scripts": {
-    "dev": "webpack-dev-server --env.mode development --colors",
-    "build": "webpack --env.mode production",
-    "test": "webpack --env.mode development"
+    "dev": "webpack-dev-server --mode=development",
+    "build": "webpack --mode=production",
+    "test": "webpack --mode=development"
   },
   "repository": {
     "type": "git",
